--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
   <div id="app"></div>
   <script>
@@ -32,5 +34,13 @@
   <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer@1.0.0-0/dist/docsify-footer.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Nocturne">
+  <meta property="og:description" content="Welcome to Nocturne, a world ensnared in eternal darkness, where the veil between light and shadow is forever blurred.">
+  <!-- <meta property="og:footer" content="FOOTER_HERE"> -->
+  <meta name="theme-color" content="ff048f">
+  
+  <link type="application/json+oembed" href="embed.json">
 </body>
+
 </html>
