--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <!-- Theme: Simple -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -34,13 +35,16 @@
   <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer@1.0.0-0/dist/docsify-footer.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  
+  
+  <!-- Embed Helper -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Nocturne">
-  <meta property="og:description" content="Welcome to Nocturne, a world ensnared in eternal darkness, where the veil between light and shadow is forever blurred.">
-  <!-- <meta property="og:footer" content="FOOTER_HERE"> -->
+  <meta property="og:description"
+    content="Welcome to Nocturne, a world ensnared in eternal darkness, where the veil between light and shadow is forever blurred.">
   <meta name="theme-color" content="ff048f">
-  
   <link type="application/json+oembed" href="embed.json">
+  
 </body>
 
 </html>
